2009-01-11  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Changed condition for commit to be more like TortoiseSVN's.

2009-01-11  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	No longer add_watch's responsiblity to also do the status check, it should
	never have been and it made things more complicated.

2009-01-11  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Committing some local modifications, not done yet.

2009-01-06  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/vcs/svn.py:
	Whoops, that just resulted in attaching watches everywhere.

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	There were a whole lot of bugs with the status checking code, so I 
	rewrote all the status checking methods. This seems to work better, however
	now I don't understand how the cache can be used to its full extent in
	this situation.

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Fixed "Already under version control" for add. Offcourse we need to integrate
	Adam's GUI stuff, but this is for my testing ;-)

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Recursive top down might be a better idea than bottom up.

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	Forgot to update exit call to match DBus style.
	
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Added recursive refresh status, there are some bugs though.

2009-01-04  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py: